tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-exact-attribute.wyst
module boot
#[exact(instructions = 2)]
fn work() { cpu.nop() }
